--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,103 +1,112 @@
 name: music
 services:
-  kafka:
-    image: 'bitnami/kafka:3.7.0'
-    container_name: kafka
-    hostname: kafka
-    ports:
-      - '9094:9094'
-    environment:
-      - KAFKA_CFG_NODE_ID=0
-      - KAFKA_CFG_PROCESS_ROLES=controller,broker
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
-      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
-      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+    kafka:
+        image: "bitnami/kafka:3.7.0"
+        container_name: kafka
+        hostname: kafka
+        ports:
+            - "9094:9094"
+        environment:
+            - KAFKA_CFG_NODE_ID=0
+            - KAFKA_CFG_PROCESS_ROLES=controller,broker
+            - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=0@kafka:9093
+            - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093,EXTERNAL://:9094
+            - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9094
+            - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
+            - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
 
-  mssql_for_library:
-    container_name: sql-server-for-library
-    image: mcr.microsoft.com/mssql/server:2022-latest
-    restart: always
-    environment:
-      ACCEPT_EULA: "Y"
-      SA_PASSWORD: "YourStrong!Passw0rd"
-    ports:
-      - 1432:1433
-    volumes:
-      - library-volume:/var/opt/mssql
-  mssql_for_music:
-    container_name: sql-server-for-music
-    image: mcr.microsoft.com/mssql/server:2022-latest
-    restart: always
-    environment:
-      ACCEPT_EULA: "Y"
-      SA_PASSWORD: "YourStrong!Passw0rd"
-    ports:
-      - 1435:1433
-    volumes:
-      - music-volume:/var/opt/mssql
-  mssql_for_file:
-    container_name: sql-server-for-file
-    image: mcr.microsoft.com/mssql/server:2022-latest
-    restart: always
-    environment:
-      ACCEPT_EULA: "Y"
-      SA_PASSWORD: "YourStrong!Passw0rd"
-    ports:
-      - 1436:1433
-    volumes:
-      - file-volume:/var/opt/mssql
-  mssql_for_identity:
-    container_name: sql-server-for-identity
-    image: mcr.microsoft.com/mssql/server:2022-latest
-    restart: always
-    environment:
-      ACCEPT_EULA: "Y"
-      SA_PASSWORD: "YourStrong!Passw0rd"
-    ports:
-      - 1437:1433
-    volumes:
-      - identity-volume:/var/opt/mssql
-  mssql_for_profile:
-    container_name: sql-server-for-profile
-    image: mcr.microsoft.com/mssql/server:2022-latest
-    restart: always
-    environment:
-      ACCEPT_EULA: "Y"
-      SA_PASSWORD: "YourStrong!Passw0rd"
-    ports:
-      - 1439:1433
-    volumes:
-      - identity-volume:/var/opt/mssql
-  elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.9.0
-    container_name: elasticsearch
-    ports:
-      - "9200:9200"
-    environment:
-      - discovery.type=single-node
-      - xpack.security.enabled=false
-    networks:
-      - es-net
-  kibana:
-    container_name: kb-container
-    image: docker.elastic.co/kibana/kibana:8.9.0
-    environment:
-      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
-    networks:
-      - es-net
-    user: "0"
-    depends_on:
-      - elasticsearch
-    ports:
-      - 5601:5601
+    mssql_for_library:
+        container_name: sql-server-for-library
+        image: mcr.microsoft.com/mssql/server:2022-latest
+        restart: always
+        environment:
+            ACCEPT_EULA: "Y"
+            SA_PASSWORD: "YourStrong!Passw0rd"
+        ports:
+            - 1432:1433
+        volumes:
+            - library-volume:/var/opt/mssql
+    mssql_for_music:
+        container_name: sql-server-for-music
+        image: mcr.microsoft.com/mssql/server:2022-latest
+        restart: always
+        environment:
+            ACCEPT_EULA: "Y"
+            SA_PASSWORD: "YourStrong!Passw0rd"
+        ports:
+            - 1435:1433
+        volumes:
+            - music-volume:/var/opt/mssql
+    mssql_for_file:
+        container_name: sql-server-for-file
+        image: mcr.microsoft.com/mssql/server:2022-latest
+        restart: always
+        environment:
+            ACCEPT_EULA: "Y"
+            SA_PASSWORD: "YourStrong!Passw0rd"
+        ports:
+            - 1436:1433
+        volumes:
+            - file-volume:/var/opt/mssql
+    mssql_for_identity:
+        container_name: sql-server-for-identity
+        image: mcr.microsoft.com/mssql/server:2022-latest
+        restart: always
+        environment:
+            ACCEPT_EULA: "Y"
+            SA_PASSWORD: "YourStrong!Passw0rd"
+        ports:
+            - 1437:1433
+        volumes:
+            - identity-volume:/var/opt/mssql
+    mssql_for_profile:
+        container_name: sql-server-for-profile
+        image: mcr.microsoft.com/mssql/server:2022-latest
+        restart: always
+        environment:
+            ACCEPT_EULA: "Y"
+            SA_PASSWORD: "YourStrong!Passw0rd"
+        ports:
+            - 1439:1433
+        volumes:
+            - profile-volume:/var/opt/mssql
+    elasticsearch:
+        image: docker.elastic.co/elasticsearch/elasticsearch:8.9.0
+        container_name: elasticsearch
+        ports:
+            - "9200:9200"
+        environment:
+            - discovery.type=single-node
+            - xpack.security.enabled=false
+        networks:
+            - es-net
+    kibana:
+        container_name: kb-container
+        image: docker.elastic.co/kibana/kibana:8.9.0
+        environment:
+            - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+        networks:
+            - es-net
+        user: "0"
+        depends_on:
+            - elasticsearch
+        ports:
+            - 5601:5601
+    redis:
+        container_name: redis
+        image: redis:7.2
+        restart: always
+        ports:
+            - 6379:6379
+        volumes:
+            - redis-data:/data
 volumes:
-  library-volume:
-  music-volume:
-  file-volume:
-  identity-volume:
-  profile-volume:
+    library-volume:
+    music-volume:
+    file-volume:
+    identity-volume:
+    profile-volume:
+    redis-data:
 networks:
-  es-net:
-    driver: bridge
+    es-net:
+        driver: bridge
