--- a/music-service/src/main/resources/application.yml
+++ b/music-service/src/main/resources/application.yml
@@ -1,32 +1,36 @@
 spring:
-  application:
-    name: music-service
-  datasource:
-    url: jdbc:sqlserver://localhost:1435;databaseName=Music;encrypt=true;trustServerCertificate=true
-    username: sa
-    password: YourStrong!Passw0rd
-    driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
-  jpa:
-    database-platform: org.hibernate.dialect.SQLServerDialect
-    hibernate:
-      ddl-auto: update
-      naming:
-        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-    defer-datasource-initialization: true
+    application:
+        name: music-service
+    datasource:
+        url: jdbc:sqlserver://localhost:1435;databaseName=Music;encrypt=true;trustServerCertificate=true
+        username: sa
+        password: YourStrong!Passw0rd
+        driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
+    jpa:
+        database-platform: org.hibernate.dialect.SQLServerDialect
+        hibernate:
+            ddl-auto: update
+            naming:
+                physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+        defer-datasource-initialization: true
+    servlet:
+        multipart:
+            max-file-size: 100MB
+            max-request-size: 200MB
+
 app:
     services:
         file: http://localhost:8083/file-service
         comment: http://localhost:8086/comment-service
-        user-library:  http://localhost:8085/user-library
+        user-library: http://localhost:8085/user-library
 server:
-  port: 8082
-  servlet:
-    context-path: /music-service
+    port: 8082
+    servlet:
+        context-path: /music-service
 
 eureka:
-  client:
-    service-url:
-      default-zone:
-        http://localhost:8761/eureka/
-  instance:
-    preferIpAddress: true
+    client:
+        service-url:
+            default-zone: http://localhost:8761/eureka/
+    instance:
+        preferIpAddress: true
