--- a/profile-service/src/main/resources/application.yaml
+++ b/profile-service/src/main/resources/application.yaml
@@ -1,61 +1,43 @@
 server:
-  port: 8081
-  servlet:
-    context-path: /profile
-#spring:
-#  neo4j:
-#    uri: bolt://localhost:7687
-#    authentication:
-#      username: neo4j
-#      password: 12345678
+    port: 8081
+    servlet:
+        context-path: /profile
 
 spring:
-  # datasource:
-  #   url: "jdbc:mysql://localhost:3306/profile_service"
-  #   username: "root"
-  #   password: "sa"
-  # jpa:
-  #   hibernate:
-  #     ddl-auto: update
-  #   show-sql: true
-  application:
-    name: profile-service
-  datasource:
-    url: jdbc:sqlserver://localhost:1433;databaseName=Profile;encrypt=true;trustServerCertificate=true
-    username: sa
-    password: 123456789
-    driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
-  jpa:
-    database-platform: org.hibernate.dialect.SQLServerDialect
-    hibernate:
-      ddl-auto: update
-      naming:
-        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-    defer-datasource-initialization: true
-
-
-#spring:
-#  datasource:
-#    driverClassName: com.microsoft.sqlserver.jdbc.SQLServerDriver
-#    url: "jdbc:sqlserver://LAPTOP-3KF7N80A\\SQLEXPRESS:1433;databaseName=identity_service;encrypt=true;trustServerCertificate=true"
-#    username: "sa"
-#    password: "123456789"
-#
-#  jpa:
-#    hibernate:
-#      ddl-auto: update
-#    show-sql: true
-
-
+    # datasource:
+    #   url: "jdbc:mysql://localhost:3306/profile_service"
+    #   username: "root"
+    #   password: "sa"
+    # jpa:
+    #   hibernate:
+    #     ddl-auto: update
+    #   show-sql: true
+    application:
+        name: profile-service
+    datasource:
+        url: jdbc:sqlserver://localhost:1433;databaseName=Profile;encrypt=true;trustServerCertificate=true
+        username: sa
+        password: 123456789
+        driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
+    jpa:
+        database-platform: org.hibernate.dialect.SQLServerDialect
+        hibernate:
+            ddl-auto: update
+            naming:
+                physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+        defer-datasource-initialization: true
+    servlet:
+        multipart:
+            max-file-size: 50MB
+            max-request-size: 50MB
 
 app:
-  services:
-    file: "http://localhost:8082/file-service"
+    services:
+        file: "http://localhost:8082/file-service"
 
 eureka:
-  client:
-    service-url:
-      default-zone:
-        http://localhost:8761/eureka/
-  instance:
-    preferIpAddress: true
+    client:
+        service-url:
+            default-zone: http://localhost:8761/eureka/
+    instance:
+        preferIpAddress: true
