--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -11,18 +11,18 @@ spring:
         locator:
           enabled: true
           lowerCaseServiceId: true
-      globalcors:
-        add-to-simple-url-handler-mapping: true
-        corsConfigurations:
-          '[/**]':
-            allowedOrigins: "*"
-            allowedMethods:
-              - GET
-              - POST
-              - PUT
-              - DELETE
-              - OPTIONS
-            allowedHeaders: "*"
+      # globalcors:
+      #   add-to-simple-url-handler-mapping: true
+      #   corsConfigurations:
+      #     '[/**]':
+      #       allowedOrigins: "*"
+      #       allowedMethods:
+      #         - GET
+      #         - POST
+      #         - PUT
+      #         - DELETE
+      #         - OPTIONS
+      #       allowedHeaders: "*"
       routes:
         - id: identity-service
           uri: lb://identity-service
@@ -102,6 +102,8 @@ springdoc:
         url: /api/comment-serivce/v3/api-docs
       - name: Search service
         url: /api/search-service/v3/api-docs
+      - name: Libarry service
+        url: /api/user-library/v3/api-docs
 eureka:
   client:
     service-url:
