--- a/user-library-service/pom.xml
+++ b/user-library-service/pom.xml
@@ -102,6 +102,12 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.8.4</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+			<version>3.3.3</version>
+		</dependency>
     </dependencies>
 
 	<build>
