--- a/profile-service/pom.xml
+++ b/profile-service/pom.xml
@@ -114,6 +114,11 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.8.4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+			<version>3.3.3</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
