--- a/admin-service/src/main/resources/application.yml
+++ b/admin-service/src/main/resources/application.yml
@@ -3,7 +3,13 @@ spring:
     name: admin-service
 server:
   port: 8088
+  servlet:
+    context-path: /admin-service
 
+app:
+    services:
+      comment: http://localhost:8086/comment-service
+      userlib: http://localhost:8085/user-library
 eureka:
   client:
     service-url:
